--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -19,10 +19,10 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="525"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wsw-lh-ZGQ">
-                                <rect key="frame" x="315" y="664" width="59" height="40"/>
+                                <rect key="frame" x="284" y="664" width="90" height="40"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="fee-1S-OFt"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="fee-1S-OFt"/>
                                     <constraint firstAttribute="height" constant="40" id="zl7-bK-YY1"/>
                                 </constraints>
                                 <state key="normal" title="Tracking">
@@ -33,7 +33,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.87706613540649414" green="0.92292499542236328" blue="0.94365382194519043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="Wsw-lh-ZGQ" secondAttribute="trailing" constant="40" id="4He-hb-k6j"/>
                             <constraint firstItem="Wsw-lh-ZGQ" firstAttribute="top" secondItem="Bdn-Ac-I0d" secondAttribute="bottom" constant="51" id="5X9-tB-hvw"/>
@@ -64,13 +64,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What made you feel this way today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXQ-sK-Nmz">
-                                <rect key="frame" x="69.666666666666657" y="164" width="274.66666666666674" height="48"/>
+                                <rect key="frame" x="69.666666666666657" y="108" width="274.66666666666674" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="eaO-XG-rQs">
-                                <rect key="frame" x="30" y="242" width="354" height="320"/>
+                                <rect key="frame" x="30" y="186" width="354" height="320"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sJN-7d-BaR">
                                         <rect key="frame" x="0.0" y="0.0" width="354" height="250"/>
@@ -127,7 +127,7 @@
                             <constraint firstItem="eaO-XG-rQs" firstAttribute="top" secondItem="LXQ-sK-Nmz" secondAttribute="bottom" constant="30" id="fKc-nz-QS1"/>
                             <constraint firstItem="eaO-XG-rQs" firstAttribute="centerX" secondItem="VsV-Tl-SHz" secondAttribute="centerX" id="kNp-K3-MR9"/>
                             <constraint firstItem="LXQ-sK-Nmz" firstAttribute="centerX" secondItem="VsV-Tl-SHz" secondAttribute="centerX" id="s4g-ex-EtA"/>
-                            <constraint firstItem="LXQ-sK-Nmz" firstAttribute="top" secondItem="wua-HY-8Rd" secondAttribute="top" constant="76" id="zfW-sc-zT0"/>
+                            <constraint firstItem="LXQ-sK-Nmz" firstAttribute="top" secondItem="wua-HY-8Rd" secondAttribute="top" constant="20" id="zfW-sc-zT0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wua-HY-8Rd"/>
                     </view>
@@ -349,27 +349,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MoodCell" rowHeight="64" id="4bb-IH-jVE" customClass="MoodTableViewCell" customModule="MoodTracker" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="64"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MoodCell" rowHeight="61.666667938232422" id="4bb-IH-jVE" customClass="MoodTableViewCell" customModule="MoodTracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="61.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4bb-IH-jVE" id="2XG-n8-7By">
-                                    <rect key="frame" x="0.0" y="0.0" width="383" height="64"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="61.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHb-bY-Y4M">
-                                            <rect key="frame" x="30" y="21.666666666666671" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="25" y="21.666666666666671" width="75" height="18.333333333333329"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="75" id="qAq-fN-aIJ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3T-KS-qWw">
+                                            <rect key="frame" x="111.99999999999999" y="22" width="37.333333333333329" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="FHb-bY-Y4M" secondAttribute="trailing" constant="311" id="cLd-od-yL4"/>
+                                        <constraint firstItem="FHb-bY-Y4M" firstAttribute="top" secondItem="2XG-n8-7By" secondAttribute="topMargin" constant="10.666666666666671" id="14V-BV-Yb5"/>
+                                        <constraint firstItem="d3T-KS-qWw" firstAttribute="centerY" secondItem="2XG-n8-7By" secondAttribute="centerY" id="6qm-gJ-VS1"/>
+                                        <constraint firstItem="FHb-bY-Y4M" firstAttribute="leading" secondItem="2XG-n8-7By" secondAttribute="leadingMargin" constant="5" id="E1A-ke-BnM"/>
+                                        <constraint firstItem="d3T-KS-qWw" firstAttribute="centerY" secondItem="2XG-n8-7By" secondAttribute="centerY" id="gDD-jv-Fea"/>
                                         <constraint firstItem="FHb-bY-Y4M" firstAttribute="centerY" secondItem="2XG-n8-7By" secondAttribute="centerY" id="s71-OM-nqU"/>
-                                        <constraint firstItem="FHb-bY-Y4M" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2XG-n8-7By" secondAttribute="leadingMargin" id="xvt-fh-zIo"/>
+                                        <constraint firstItem="d3T-KS-qWw" firstAttribute="leading" secondItem="FHb-bY-Y4M" secondAttribute="trailing" constant="12" id="sAb-Hh-x1n"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="d3T-KS-qWw" secondAttribute="trailing" constant="12" id="zcx-c3-et4"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="commentLabel" destination="d3T-KS-qWw" id="IdO-1H-Rcs"/>
                                     <outlet property="dateLabel" destination="FHb-bY-Y4M" id="IP2-ue-gYm"/>
                                     <segue destination="oeI-ql-yea" kind="show" identifier="TrackingCommentSegue" id="7q0-kb-Ceg"/>
                                 </connections>
@@ -402,6 +416,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cIf-c8-dLf">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.87706613540649414" green="0.92292499542236328" blue="0.94365382194519043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
